--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "type": "module",
   "engines": {
     "node": "18.12.0"
+  },
+  "scripts": {
+    "07": "ts-node src/07/07.ts"
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
